core/ingress-symbiote-core/administration-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: administration-ingress-direct
  namespace: symbiote-core
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header 'Content-Security-Policy' 'upgrade-insecure-requests';
spec:
  tls:
    - hosts:
        - administration.iotfeds.intracom-telecom.com
      secretName: wildcard-ingress-tls
  rules:
    - host: administration.iotfeds.intracom-telecom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: symbiote-admin
                port:
                  number: 8250
