core/ingress-symbiote-core/cloudcoreinterface-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudcoreinterface-ingress
  namespace: symbiote-core
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header 'Content-Security-Policy' 'upgrade-insecure-requests';
spec:
  tls:
    - hosts:
        - symbiote-core.iotfeds.intracom-telecom.com
      secretName: wildcard-ingress-tls
  rules:
    - host: symbiote-core.iotfeds.intracom-telecom.com
      http:
        paths:
          - path: /cloudCoreInterface
            pathType: Prefix
            backend:
              service:
                name: symbiote-cloudcoreinterface
                port:
                  number: 8101
